<resources>
    <string name="app_name">Swap</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title">Company</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="linkedin_account">account</string>
    <string name="location">Location</string>
    <string name="button_send">Send</string>
</resources>
